# Deukbot5

./: Cargo.toml
src/: defines.rs  deukbot_result.rs  embed.rs  global.rs  main.rs
src/database/: database_initialization.rs  mod.rs  role_permissions.rs
src/message_handling/: mod.rs  permission.rs
src/message_handling/command_handler/: async_fn.rs  command.rs  command_builder.rs  command_data.rs  command_group.rs  command_request.rs  mod.rs  parameter_matcher.rs
src/message_handling/command_handler/command_groups/: command_group.rs  general_commands.rs  mod.rs
src/message_handling/command_handler/slash_command_handling/: global_commands.rs  mod.rs  slash_command.rs
src/utilities/: bot_opinions.rs  mod.rs
