[package]
name = "deukbot5"
version = "0.1.0"
authors = ["Deukhoofd <Deukhoofd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simplelog = "0.10.0"
regex = "1"
lazy_static = "1.4.0"
getset = "0.1.1"
futures = "0.3.13"
maplit = "1.0.2"
chrono = "0.4.19"
unicase = "2.6.0"
enum-display-derive = "0.1.1"
tokio = { version = "1", features = ["full"] }

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "cache",
]
version = "0.10"