[package]
name = "deukbot5"
version = "0.1.0"
authors = ["Deukhoofd <Deukhoofd@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = "thin"
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = 1
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
log = { "version" = "0.4", features = ["max_level_trace", "release_max_level_info"] }
simplelog = "0.10.0"
regex = "1"
lazy_static = "1.4.0"
getset = "0.1.1"
futures = "0.3.13"
maplit = "1.0.2"
chrono = "0.4.19"
unicase = "2.6.0"
enum-display-derive = "0.1.1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.0"

num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "cache",
]
version = "0.10"